--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,24 @@
-version: '3.9'
+version: "3.9"
 
 services:
-  django:
-    image: django-docker:0.0.1
-    build: .
-    ports:
-      - "8000:8000"
+  db:
+    image: postgres
+    volumes: 
+      - ./data/db:/var/lib/postgresql/data
+    environment:
+      - POSTGRES_DB=sg_db
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSEWORD=postgres
 
+  web:
+    build: .
+    command: python manage.py runserver 0.0.0.0:8000
+    volumes:
+      - .:/code
+    ports:
+      -"8000:8000"
+    depends_on:
+      -db
+
+
+ 
